# Enterprise-AI-Operations-Copilot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes_chat.py  routes_health.py  routes_tickets.py  routes_workflows.py
app/copilot/: __init__.py  planner.py  prompts.py  response_builder.py  safety_guardrails.py  tool_router.py
app/core/: config.py  database.py  security.py
app/data/: group_map.json  license_map.json  mock_tenant_state.json  sample_tickets.json  sample_users.json
app/models/: __init__.py  report.py  ticket.py  user.py  workflow.py
assets/: architecture-diagram.md  demo-output.md  project-summary.md
docs/: architecture.md  example-workflows.md  roadmap.md  safety-model.md  screenshots.md  technical-review-guide.md  tool-calling-design.md
reports/: access-troubleshooting-report-sample.json  access-troubleshooting-report-sample.md  offboarding-report-sample.json  offboarding-report-sample.md  onboarding-report-sample.json  onboarding-report-sample.md  sample-access-troubleshooting.json  sample-access-troubleshooting.md  sample-onboarding.json  sample-onboarding.md  ticket-analysis-report-sample.json  ticket-analysis-report-sample.md
tests/: test_access_troubleshooting.py  test_api_routes.py  test_group_advisor.py  test_license_advisor.py  test_planner.py  test_report_writer.py  test_safety_guardrails.py  test_ticket_analyzer.py
(+13 files in other folders)
